fix nav wrapping bug. Closes #8

--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,6 +1,5 @@
 .site-title {
   display: flex;
-  height: 54px;
 }
 
 .site-title::before {
